# rust-super-heroes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  cardamon.toml  docker-compose.yml  k6.js  max.js
.github/: build.yml
.github/workflows/: build.yml  main.yml
bruno/: Perform fight.bru  bruno.json
k6/: randomFight.js
lib/superhero-types/: Cargo.toml
lib/superhero-types/src/: fights.rs  heroes.rs  lib.rs  location.rs  villains.rs
services/grpc-locations/: Cargo.toml  Dockerfile  README.md  build.rs
services/grpc-locations/src/: main.rs
services/rest-fights/: Cargo.toml  build.rs
services/rest-fights/resources/: fight_request.json
services/rest-fights/src/: main.rs
services/rest-heroes/: Cargo.toml  Dockerfile  Dockerfile copy
services/rest-heroes/src/: main.rs
services/rest-villains/: Cargo.toml  Dockerfile
services/rest-villains/src/: main.rs
