[package]
name = "superhero-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [] }
uuid = { version = "1.16.0", features = ["v4"] }
