[package]
name = "rest-fights"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.12.3"
prost = { version = "0.13.5", features = ["prost-derive"] }
superhero-types = { path = "../../lib/superhero-types"}
log = "0.4.26"
env_logger = "0.11.7"

[build-dependencies]
tonic-build = "0.12.3"
