[package]
name = "rest-heroes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["full"] }
superhero-types = { path = "../../lib/superhero-types"}

# axum = { workspace = true}
# serde = { workspace = true}
# serde_json = { workspace = true}
# sqlx = { workspace = true}
# tokio = { workspace = true}
